--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "firebase-admin": "^13.5.0"
+    "firebase-admin": "^13.5.0",
+    "nanoid": "^5.1.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
